[package]
name = "ff-transcode-helper"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ffmpeg = { version = "8.1.0", package = "ffmpeg-next" }
indicatif = "0.18.4"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
